--- a/style.css
+++ b/style.css
@@ -1,52 +1,196 @@
-body {
-	
+html {
+    font-family: sans-serif;
+    scroll-behavior: smooth;
+}
+.title {
+    font-weight: bold;
+    font-size: 70px;
+    color: #fff;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    padding: 30px 60px;
+}
+.subtext {
+    font-size: 20px;
+    color: #fff;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+section {
+    height: 100vh;
+    width: 100%;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    flex-direction: column;
+    position: relative;
+}
+.text {
+    font-size: 70px;
+    color: #fff;
+    line-height: -40px;
+    list-style-type: "•";
+    cursor: default;
+    margin-bottom: 90px;
+}
+.cit {
+    font-size: 50px;
+    color: #fff;
+    font-style: italic;
+    position: relative;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.cit h2 {
+    width: 40%;
+}
+.gifs {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 7vh;
+    width: 40%;
 }
 
-#banner {
-	width:100%;
+.items:hover {
+    list-style-type: ">";
+    font-size: 75px;
+}
+.icons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.principal{
-	background: #CCCCCC;
-	padding: 30px;
+#sec-1 {
+    background: linear-gradient(45deg, #2A0944, #3B185F, #A12568, #FEC260);
+    background-size: 300% 300%;
+    animation: gradient 10s ease infinite;
+}
+#sec-2 {
+    background-color: #2A0944;
+}
+#sec-3 {
+    background-color: #3B185F;
+}
+#sec-4 {
+    background-color: #2A0944;
+}
+#sec-5 {
+    background-color: #A12568;
+}
+.scroll-down {
+    height: 50px;
+    width: 30px;
+    border: 2px solid #fff;
+    position: absolute;
+    left: 49%;
+    bottom: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -100%) rotate(45deg);
+    border: 2px solid #fff;
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+    top: 30%;
+    animation-delay: 0.3s;
 }
 
-.titulo-principal {
-	padding-left: 20px;
+.scroll-top {
+    height: 50px;
+    width: 30px;
+    border: 2px solid #fff;
+    position: absolute;
+    left: 49%;
+    bottom: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.scroll-top::before,
+.scroll-top::after {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -100%) rotate(45deg);
+    border: 2px solid #fff;
+    border-bottom: transparent;
+    border-right: transparent;
+    animation: scroll-top 1s ease-in-out infinite;
+}
+.scroll-top::before {
+    top: 30%;
+    animation-delay: 0.3s;
 }
 
-.titulo-centralizado {
-	text-align: center
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
-p {
-	text-align: center;
+@keyframes scroll-down {
+    0% {
+        
+        opacity: 0;
+    }
+    30% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        top: 90%;
+        opacity: 0;
+    }
 }
 
-#missao {
-	font-size: 20px
+@keyframes scroll-top {
+    100% {
+        
+        opacity: 0;
+    }
+    60% {
+        opacity: 1;
+    }
+    30% {
+        opacity: 1;
+    }
+    0% {
+        top: 90%;
+        opacity: 0;
+    }
 }
-
-em strong {
-	color: #FF0000;
-}
-
-.itens {
-	font-style: italic
-}
-
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
-}
-
-ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
-}
-
-.imagembeneficios {
-	width: 50%;
-}
+    
