--- a/style.css
+++ b/style.css
@@ -18,9 +18,15 @@ html {
     flex-direction: column;
     position: relative;
 }
-section {
+.titulo-beneficios {
+    font-weight: bold;
+    font-size: 40px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
     height: 100vh;
     width: 100%;
+    margin-top: 50px;
+    text-align: center;
 }
 .container {
     display: flex;
@@ -31,12 +37,22 @@ section {
     position: relative;
 }
 .text {
-    font-size: 70px;
+    font-size: 30px;
     color: #fff;
-    line-height: -40px;
+    line-height: -20px;
     list-style-type: "•";
     cursor: default;
-    margin-bottom: 90px;
+    margin-bottom: 300px;
+    font-family: 'Montserrat', sans-serif;
+}
+.informações {
+    font-size: 30px;
+    color: #fff;
+    line-height: -20px;
+    list-style-type: "•";
+    cursor: default;
+    margin-bottom: 100px;
+    font-family: 'Montserrat', sans-serif;
 }
 .cit {
     font-size: 50px;
@@ -60,10 +76,6 @@ section {
     width: 40%;
 }
 
-.items:hover {
-    list-style-type: ">";
-    font-size: 75px;
-}
 .icons {
     width: 100%;
     display: flex;
@@ -193,4 +205,42 @@ section {
         opacity: 0;
     }
 }
-    
+form {
+   font-weight: bold;
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+    color: white;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background-color: red;
+    transform: scale(1.05);
+}
