--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@ html {
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
+nav {
+    background-color: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.logo {
+    display: flex;
+    position: relative;
+    align-items: center;
+}
+.esp {
+    color: #fff;
+    font-weight: bold;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: end;
+}
+.fas {
+    font-size: 2em;
+    color: #fff;
+}
 .title {
     font-weight: bold;
     font-size: 70px;
