--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav {
     font-size: 40px;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
-    height: 100vh;
+    height: 200px;
     width: 100%;
     margin-top: 50px;
     text-align: center;
@@ -66,13 +66,17 @@ nav {
     position: relative;
 }
 .text {
-    font-size: 30px;
-    color: #fff;
-    line-height: -20px;
-    list-style-type: "•";
-    cursor: default;
-    margin-bottom: 300px;
+    display: inline-block;
+    text-align: center;
+	width: 30%;
+    vertical-align: top;
+	margin-bottom: 450px;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border-radius: 10px;
+    font-size: 34px;
     font-family: 'Montserrat', sans-serif;
+
 }
 .informações {
     font-size: 30px;
