--- a/style.css
+++ b/style.css
@@ -38,7 +38,12 @@ nav {
     border: 3px solid #fff;
     border-radius: 5px;
     padding: 30px 60px;
+    align-items: center;
 }
+#title {
+    text-align: center;
+}
+
 .subtext {
     font-size: 20px;
     color: #fff;
