--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ form label, form legend {
     border: none;
     border-radius: 5px;
     background-color: rgb(34, 34, 34);
+    color: white;
 }
 
 .checkbox {
