--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ nav {
     margin-right: 10%;
     margin-left: 10%;
     text-align: center;
+    color: white;
 }
 .itens {
     margin-left: 20px;
