--- a/style.css
+++ b/style.css
@@ -16,22 +16,20 @@ nav {
     justify-content: space-between;
     }
 
-.logo {
-    display: flex;
-    position: relative;
-    align-items: center;
+.logo img {
+    width: 325px;
 }
 .esp {
+    font-size: 15px;
     color: #fff;
     font-weight: bold;
     display: flex;
-    position: relative;
     align-items: center;
     justify-content: end;
 }
 .fas {
+    margin: 7px;
     font-size: 1.5em;
-    color: #fff;
 }
 .title {
     font-weight: bold;
@@ -45,7 +43,7 @@ nav {
 
 .subtext {
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
     margin-top: 30px;
     display: flex;
