--- a/style.css
+++ b/style.css
@@ -35,10 +35,6 @@ nav {
     font-weight: bold;
     font-size: 70px;
     color: #fff;
-    border: 3px solid #fff;
-    border-radius: 5px;
-    padding: 30px 60px;
-    align-items: center;
 }
 
 .subtext {
@@ -125,22 +121,33 @@ nav {
 }
 
 #sec-1 {
-    color: #000;
-    background-image: url("sec-1.png");
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background: url("sec-1.png");
+    background-size: cover;
     animation: gradient 10s ease infinite;
 }
+/*
+.overlay {
+    position: absolute;  
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .3;
+}*/
 #sec-2 {
-    background-color: #2A0944;
+    background: url("assets/bg-3.1.png");
 }
 #sec-3 {
-    background-color: #3B185F;
+    background-color: #000;
 }
 #sec-4 {
-    background-color: #2A0944;
+    background: url("assets/bg-1.png");
 }
 #sec-5 {
-    background-color: #A12568;
+    background-color: #000;
 }
 .scroll-down {
     height: 50px;
