--- a/style.css
+++ b/style.css
@@ -131,14 +131,14 @@ nav {
     background-size: cover;
     animation: gradient 10s ease infinite;
 }
-/*
+
 .overlay {
     position: absolute;  
     width: 100%;
     height: 100%;
-    background: #000;
+    background: #57423F;
     opacity: .3;
-}*/
+}
 #sec-2 {
     background: url("assets/bg-3.1.png");
 }
