--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ html {
 nav {
     background-color: #000;
 }
-#containerHeader {
+header .container {
+    height: 53px;
     width: 85%;
 	margin: 0 auto;
     display: flex;
@@ -25,11 +26,34 @@ nav {
     font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: end;
 }
 .fas {
     margin: 7px;
     font-size: 1.5em;
+}
+#sec-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background: url("sec-1.png");
+    background-size: cover;
+    animation: gradient 10s ease infinite;
+}
+/*
+.overlay {
+    position: absolute;  
+    width: 100%;
+    height: 100%;
+    background: #57423F;
+    opacity: .3;
+}*/
+.box {
+    background: rgba(0,0,0, 0.3);
+    width: 80%;
+    height: 90%;
+    box-sizing: border-box;
+    border-radius: 15px;
 }
 .title {
     font-weight: bold;
@@ -55,27 +79,23 @@ nav {
     margin-top: 50px;
     text-align: center;
 }
+
 .container {
     display: flex;
+    align-items: center;
     text-align: center;
-    align-items: flex-start;
-    justify-content: space-around;
-    height: 825px;
+    justify-content: center;
+    height: 80vh;
     flex-direction: column;
     position: relative;
 }
 .text {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-	width: 20%;
-    font-size: 25px;
-    height: 40px;
-    justify-content: space-around;
-    margin-right: 10%;
-    margin-left: 10%;
-    text-align: center;
-    color: white;
+    font-size: 70px;
+    color: #fff;
+    line-height: -40px;
+    list-style-type: "•";
+    cursor: default;
+    margin-bottom: 90px;
 }
 .itens {
     margin-left: 20px;
@@ -122,45 +142,25 @@ nav {
     justify-content: space-evenly;
 }
 
-#sec-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    background: url("sec-1.png");
-    background-size: cover;
-    animation: gradient 10s ease infinite;
-}
-
-.overlay {
-    position: absolute;  
-    width: 100%;
-    height: 100%;
-    background: #57423F;
-    opacity: .3;
-}
-#sec-1 .container {
-    display: flex;
-    align-items: center;
-
-}
-#sec-1 .container .box {
-    background: rgba(0,0,0, 0.3);
-    width: 80%;
-    height: 90%;
-    box-sizing: border-box;
-    border-radius: 15px;
-}
 #sec-2 {
-    background: url("assets/bg-3.1.png");
+    background-color: #000;
+}
+#sec-2 .container {
+    height: 15vh;
 }
 #sec-3 {
-    background-color: #000;
+    background: url("assets/bg-3.png");
 }
 #sec-4 {
     background: url("assets/bg-1.png");
 }
 #sec-5 {
+    background-color: #000;
+}
+#sec-6 {
+    background: url("assets/bg-1.png");
+}
+#sec-7 {
     background-color: #000;
 }
 .scroll-down {
