--- a/style.css
+++ b/style.css
@@ -51,20 +51,41 @@ header .container {
 }
 
 .box {
+    display: flex;
     background: rgba(0,0,0, 0.3);
     width: 80%;
     height: 90%;
+    padding: 60px;
     box-sizing: border-box;
     border-radius: 15px;
+    justify-content: space-evenly;
+}
+.texto {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+}
+.button {
+    margin: 25px 0px;
+}
+.yt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+h6 {
+    color: #fff;
 }
 .title {
     font-weight: bold;
-    font-size: 70px;
+    font-size: 50px;
     color: #fff;
 }
 
 .subtext {
-    text-align: center;
     font-size: 25px;
     color: #fff;
     margin-top: 30px;
@@ -139,7 +160,20 @@ header .container {
     background-color: #000;
 }
 #sec-2 .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     height: 15vh;
+}
+
+.lorem {
+    width: 26%;
+    color: #fff;
+    text-align: justify;
+}
+
+.star5 {
+    width: 26%;
 }
 #sec-3 {
     background: url("assets/bg-3.png");
