--- a/style.css
+++ b/style.css
@@ -13,14 +13,13 @@ nav {
     text-align: center;
     justify-content: center;
     height: 100vh;
-    flex-direction: column;
+    width: 85%;
+    margin: 0 auto;
     position: relative;
 }
 
 header .container {
     height: 53px;
-    width: 85%;
-	margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -39,7 +38,7 @@ header .container {
 }
 .fas {
     margin: 7px;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 #sec-1 {
     background: url("sec-1.png");
@@ -91,17 +90,9 @@ h6 {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    position: relative;
+    text-align: justify;
 }
-.titulo-beneficios {
-    font-weight: bold;
-    font-size: 40px;
-    color: #fff;
-    height: 00px;
-    width: 100%;
-    margin-top: 50px;
-    text-align: center;
-}
+
 
 .text {
     font-size: 70px;
@@ -178,6 +169,26 @@ h6 {
 #sec-3 {
     background: url("assets/bg-3.png");
 }
+#sec-3 .container {
+    height: 70vh;
+}
+.imp {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+}
+.titulo-beneficios {
+    font-weight: bold;
+    font-size: 40px;
+    color: #fff;
+    text-align: justify;
+}
+.deal {
+    margin: 20px 0px;
+    width: 80%;
+}
+
 #sec-4 {
     background: url("assets/bg-1.png");
 }
