--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,18 +1,73 @@
-.galery {
-    width: 640px;
-    height: 360px;
-    background-color: black;
+.carousel {
+    width: 840px;
+    height: 500px;
     overflow: hidden;
+    display: flex;
+    padding-bottom: 200px;
 }
 
-.galery .fotos {
-    width: 500%;
-    animation-name: animacao;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-
+.fotos input {
+    display: none;
+}
+.slide {
+    width: 20%;
+    transition: 2s;
 }
 
-.galery .fotos img {
-    width: 19.9%;
+.slide img {
+    width: 840px;
+    height: 500px;
+}
+
+.nav-m {
+    position: absolute;
+    width: 840px;
+    margin-top: -40px;
+    justify-content: center;
+    display: flex;
+}
+
+.m-btn {
+    border: 2px solid rgb(255, 17, 0);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.m-btn:not(:last-child) {
+    margin-right: 30px;
+}
+.m-btn:hover {
+    background-color: rgb(255, 17, 0);
+}
+
+#radio1:checked ~.first {
+    margin-left: 0;
+}
+#radio2:checked ~.first {
+    margin-left: -20%;
+}
+#radio3:checked ~.first {
+    margin-left: -40%;
+}
+#radio4:checked ~.first {
+    margin-left: -60%;
+}
+#radio5:checked ~.first {
+    margin-left: -80%;
+}
+
+.nav-auto {
+    position: absolute;
+    width: 840px;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-auto div {
+    border: 2px solid rgb(255, 17, 0);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
 }
