--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,73 +1,32 @@
 .carousel {
-    width: 840px;
-    height: 500px;
+    width: 60%;
+    margin: auto;
+    border: 10px solid #7e171d;
     overflow: hidden;
+    border-radius: 10px;
+}
+
+.slider {
     display: flex;
-    padding-bottom: 200px;
-}
-
-.fotos input {
-    display: none;
-}
-.slide {
-    width: 20%;
-    transition: 2s;
-}
-
-.slide img {
-    width: 840px;
+    width: 100%;
     height: 500px;
 }
 
-.nav-m {
+#prevBtn {
     position: absolute;
-    width: 840px;
-    margin-top: -40px;
-    justify-content: center;
-    display: flex;
-}
-
-.m-btn {
-    border: 2px solid rgb(255, 17, 0);
-    padding: 5px;
-    border-radius: 10px;
+    top: 50%;
+    z-index: 10;
+    left: 5%;
+    font-size: 30px;
+    color: rgb(255, 17, 0);
     cursor: pointer;
-    transition: 1s;
 }
-.m-btn:not(:last-child) {
-    margin-right: 30px;
-}
-.m-btn:hover {
-    background-color: rgb(255, 17, 0);
-}
-
-#radio1:checked ~.first {
-    margin-left: 0;
-}
-#radio2:checked ~.first {
-    margin-left: -20%;
-}
-#radio3:checked ~.first {
-    margin-left: -40%;
-}
-#radio4:checked ~.first {
-    margin-left: -60%;
-}
-#radio5:checked ~.first {
-    margin-left: -80%;
-}
-
-.nav-auto {
+#nextBtn {
     position: absolute;
-    width: 840px;
-    display: flex;
-    justify-content: center;
-}
-
-.nav-auto div {
-    border: 2px solid rgb(255, 17, 0);
-    padding: 5px;
-    border-radius: 10px;
+    top: 50%;
+    z-index: 10;
+    right: 5%;
+    font-size: 30px;
+    color: rgb(255, 17, 0);
     cursor: pointer;
-    transition: 1s;
 }
