--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,5 +1,6 @@
 .carousel {
-    width: 60%;
+
+    width: 48%;
     margin: auto;
     border: 10px solid #7e171d;
     overflow: hidden;
@@ -11,12 +12,17 @@
     width: 100%;
     height: 500px;
 }
-
+.slider img {
+    position: absoluete;
+    width: 100%;
+    height: 100%
+    object-fit cover;
+}
 #prevBtn {
     position: absolute;
     top: 50%;
     z-index: 10;
-    left: 5%;
+    left: 15%;
     font-size: 30px;
     color: rgb(255, 17, 0);
     cursor: pointer;
@@ -25,7 +31,7 @@
     position: absolute;
     top: 50%;
     z-index: 10;
-    right: 5%;
+    right: 15%;
     font-size: 30px;
     color: rgb(255, 17, 0);
     cursor: pointer;
