--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,29 +1,45 @@
 .carousel {
-
-    width: 48%;
+    display: flex;
     margin: auto;
+    height: 53vh;
+    width: 50%;
     border: 10px solid #7e171d;
     overflow: hidden;
     border-radius: 10px;
+    
 }
 
 .slider {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.slider .slide {
+    width: 100%;
+    height: 100%;
+
+}
+.slider .slide .active {
+    position: absolute;
+}
+
+.slide img {
+    height: 100%;
+    width:100%;
+}
+.navigation {
     display: flex;
-    width: 100%;
-    height: 500px;
+    height: 53vh;
+    align-items: center;
+    justify-content: space-between;
 }
-.slider img {
-    position: absoluete;
-    width: 100%;
-    height: 100%
-    object-fit cover;
-}
+
 #prevBtn {
     position: absolute;
     top: 50%;
     z-index: 10;
-    left: 15%;
-    font-size: 30px;
+    font-size: 2em;
     color: rgb(255, 17, 0);
     cursor: pointer;
 }
@@ -31,8 +47,8 @@
     position: absolute;
     top: 50%;
     z-index: 10;
-    right: 15%;
-    font-size: 30px;
+    right: 0%;
+    font-size: 2em;
     color: rgb(255, 17, 0);
     cursor: pointer;
 }
