--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
 }
 
 header .container {
-    height: 53px;
+    height: 6vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -69,6 +69,18 @@ header .container {
 .button {
     margin: 25px 0px;
 }
+.button .btn {
+        width: 70%;
+        padding: 15px 0;
+        background-color: red;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        border: none;
+        border-radius: 5px;
+        transition: 0.5s all;
+        cursor: pointer;
+}
 .yt {
     display: flex;
     flex-direction: column;
@@ -91,60 +103,6 @@ h6 {
     display: flex;
     flex-direction: column;
     text-align: justify;
-}
-
-
-.text {
-    font-size: 70px;
-    color: #fff;
-    line-height: -40px;
-    list-style-type: "•";
-    cursor: default;
-    margin-bottom: 90px;
-}
-.itens {
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align: center;
-}
-.informações {
-    text-align: center;
-    font-size: 30px;
-    color: #fff;
-    line-height: 85px;
-    cursor: default;
-    margin-bottom: 00px;
-    padding: 700px;
-}
-.cit {
-    font-size: 50px;
-    color: #fff;
-    font-style: italic;
-    position: relative;
-    flex-direction: row;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.cit h2 {
-    width: 40%;
-}
-.gifs {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 7vh;
-    width: 40%;
-}
-
-.icons {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    align-items: center;
-    justify-content: space-evenly;
 }
 
 #sec-2 {
@@ -249,6 +207,10 @@ h6 {
 
 
 }
+.depoimento {
+    display: flex;
+    width: 60%;
+}
 .text-box {
     border: 4px solid #fff;
     padding: 20px;
@@ -257,21 +219,21 @@ h6 {
     flex-direction: column;
     justify-content: space-between;
 }
-.depoimento {
-    display: flex;
-    width: 60%;
-}
+
 .aluno {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.aluno .star5 {
-    width: 40%;
-}
+
 .aluno .avatar {
     margin-top: 20px;
 }
+
+.aluno .star5 {
+    width: 40%;
+}
+
 #sec-6 {
     background: url("assets/bg-3.png");
 }
@@ -289,96 +251,7 @@ h6 {
 #sec-6 .subtext {
     font-size: 30px;
 }
-#sec-7 {
-    background-color: #000;
-}
-.scroll-down {
-    height: 50px;
-    width: 30px;
-    border: 2px solid #fff;
-    position: absolute;
-    left: 49%;
-    bottom: 20px;
-    border-radius: 50px;
-    cursor: pointer;
-}
-.scroll-down::before,
-.scroll-down::after {
-    content: "";
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    height: 10px;
-    width: 10px;
-    transform: translate(-50%, -100%) rotate(45deg);
-    border: 2px solid #fff;
-    border-top: transparent;
-    border-left: transparent;
-    animation: scroll-down 1s ease-in-out infinite;
-}
-.scroll-down::before {
-    top: 30%;
-    animation-delay: 0.3s;
-}
 
-.scroll-top {
-    height: 50px;
-    width: 30px;
-    border: 2px solid #fff;
-    position: absolute;
-    left: 49%;
-    bottom: 20px;
-    border-radius: 50px;
-    cursor: pointer;
-}
-.scroll-top::before,
-.scroll-top::after {
-    content: "";
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    height: 10px;
-    width: 10px;
-    transform: translate(-50%, -100%) rotate(45deg);
-    border: 2px solid #fff;
-    border-bottom: transparent;
-    border-right: transparent;
-    animation: scroll-top 1s ease-in-out infinite;
-}
-.scroll-top::before {
-    top: 30%;
-    animation-delay: 0.3s;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 40%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 40%;
-    }
-}
-
-@keyframes scroll-down {
-    0% {
-        
-        opacity: 0;
-    }
-    30% {
-        opacity: 1;
-    }
-    60% {
-        opacity: 1;
-    }
-    100% {
-        top: 90%;
-        opacity: 0;
-    }
-}
- 
 form {
    font-weight: bold;
    color: white;
@@ -400,7 +273,7 @@ form label, form legend {
     background-color: #fff;
 }
 
-.enviar {
+.btn {
     padding: 15px 15px;
     background-color: red;
     color: white;
@@ -413,7 +286,7 @@ form label, form legend {
     cursor: pointer;
 }
 
-.enviar:hover {
+.btn:hover {
     background-color: rgb(255, 255, 255);
     transform: scale(1.05);
     color: red;
@@ -429,9 +302,9 @@ footer ul {
     align-items: center;
     justify-content: space-between;
 }
-#containerFooter {
+footer .container {
+    height: 8vh;
     width: 85%;
-	margin: 0 auto;
 }
 .rodape {
     color: #FFFFFF;
@@ -442,4 +315,16 @@ footer ul {
 .register-title {
     font-size: 30px;
     margin-top: 50px;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 40%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 40%;
+    }
 }
