--- a/style.css
+++ b/style.css
@@ -443,3 +443,17 @@ footer ul {
     font-size: 30px;
     margin-top: 50px;
 }
+h2::after {
+    content: "|";
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+@keyframes pisca {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
