--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,54 +1,29 @@
-.carousel {
-    display: flex;
-    margin: auto;
-    height: 53vh;
-    width: 50%;
-    border: 10px solid #7e171d;
-    overflow: hidden;
-    border-radius: 10px;
-    
-}
-
-.slider {
-    position: relative;
-    width: 100%;
-    height: 100%;
+.galery {
+    width: 640px;
+    height: 360px;
+    background-color: black;
     overflow: hidden;
 }
-.slider .slide {
-    width: 100%;
-    height: 100%;
+
+.galery .fotos {
+    width: 500%;
+    animation-name: animacao;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
 
 }
-.slider .slide .active {
-    position: absolute;
-}
 
-.slide img {
-    height: 100%;
-    width:100%;
+.galery .fotos img {
+    width: 19.9%;
 }
-.navigation {
-    display: flex;
-    height: 53vh;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#prevBtn {
-    position: absolute;
-    top: 50%;
-    z-index: 10;
-    font-size: 2em;
-    color: rgb(255, 17, 0);
-    cursor: pointer;
-}
-#nextBtn {
-    position: absolute;
-    top: 50%;
-    z-index: 10;
-    right: 0%;
-    font-size: 2em;
-    color: rgb(255, 17, 0);
-    cursor: pointer;
+@keyframes animacao {
+    0% { margin-left: 0; }
+    20% { margin-left: 0; }
+    25% { margin-left: -100%; }
+    45% { margin-left: -100%; }
+    50% { margin-left: -200%; }
+    70% { margin-left: -200%; }
+    75% { margin-left: -300%; }
+    95% { margin-left: -300%; }
+    100% { margin-left: -400%; }
 }
