--- a/stylecarrossel.css
+++ b/stylecarrossel.css
@@ -1,4 +1,5 @@
 .galery {
+    display: flex;
     width: 600px;
     height: 360px;
     background-color: black;
@@ -22,4 +23,16 @@
 
 .galery .fotos img {
     width: 20%;
+}
+
+@keyframes animacao {
+    0% { margin-left: 0; }
+    20% { margin-left: 0; }
+    25% { margin-left: -100%; }
+    45% { margin-left: -100%; }
+    50% { margin-left: -200%; }
+    70% { margin-left: -200%; }
+    75% { margin-left: -300%; }
+    95% { margin-left: -300%; }
+    100% { margin-left: -400%; }
 }
