--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ h6 {
 .imp img {
     width: 70%;
 }
-.titulo-beneficios {
+.titulo {
     font-weight: bold;
     font-size: 40px;
     color: #fff;
@@ -223,21 +223,13 @@ h6 {
     border-bottom: 2px solid rgb(255, 17, 0);
     padding: 20px 0px;
 }
-.titulo-transforme {
-    font-weight: bold;
-    font-size: 40px;
-    color: #fff;
-    text-align: justify;
-    border-bottom: 2px solid rgb(0,0,0);
+.transforme .titulo {
     width: 50%;
 }
-.subtext-transforme {
+.transforme .subtext {
     width: 50%;
     font-size: 25px;
-    color: #fff;
     margin-top: 30px;
-    display: flex;
-    flex-direction: column;
     text-align: justify;
 }
 
@@ -250,11 +242,11 @@ h6 {
     flex-direction: column;
     justify-content: space-evenly;
 }
-.titulo-social {
+#sec-5 .container .titulo {
     font-weight: bold;
     font-size: 40px;
     color: #fff;
-    text-align: justify;
+    width: 100%;
 }
 .depoimento {
     display: flex;
@@ -298,7 +290,7 @@ h6 {
     align-items: center;
 }
 #sec-6 .subtext {
-    font-size: 30px;
+    font-size: 35px;
 }
 
 form {
